Make a test for valid user

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,3 +8,9 @@
 #   name: MyString
 #   email: MyString
 
+
+
+one:
+  name: Name Example
+  email: name@example.com
+  password_digest: <%= User.digest('password') %>
