--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -14,8 +14,26 @@ one:
   name: First Example
   email: first@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
 
 two:
   name: Two Example
   email: two@example.com
   password_digest: <%= User.digest('password') %>
+
+three:
+  name: Three Example
+  email: three@example.com
+  password_digest: <%= User.digest('password') %>
+
+four:
+  name: Four Example
+  email: four@example.com
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
