--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -18,6 +18,12 @@ one:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+inactive:
+  name: Inactive User
+  email: inactive@example.com
+  password_digest: <%= User.digest('password') %>
+  activated: false
+
 two:
   name: Two Example
   email: two@example.com
